Amend Owner references

--- a/ThreePhaseAcMeasurement/model.yaml
+++ b/ThreePhaseAcMeasurement/model.yaml
@@ -91,7 +91,8 @@ ThreePhaseAcMeasurement:
       $ref: >-
         https://smart-data-models.github.io/data-models/ngsi-ld.yaml#/name
     owner:
-      $ref: https://smart-data-models.github.io/data-models/fiware-terms.yaml#/owner
+      $ref: >-
+        https://smart-data-models.github.io/data-models/fiware-terms.yaml#/owner
     phaseToPhaseVoltage:
       x-ngsi:
         type: Property
