--- a/CONTRIBUTORS.yaml
+++ b/CONTRIBUTORS.yaml
@@ -1,30 +1,30 @@
 description: This is a compilation list of all CONTRIBUTORS across different objects (data models) alphabetically ordered. All fields are non mandatory
-contributors:
--
- name: Dmitrii
- surname:  Demin
- mail: mail@demin.co
- organization: None
- project: 
- comments: 
+contributors: 
 -
  name: Jose M.
- surname:  Cantera
+ surname: Cantera
  mail: jmcanterafonseca4github@gmail.com
  organization: CanteraFonseca.EU
  project: 
  comments: 
 -
- name: Otto
- surname:  Hylli
- mail: None
- organization: Tampere University
+ name: Dmitrii
+ surname: Demin
+ mail: mail@demin.co
+ organization:
+ project: 
+ comments:
+-
+ name: Jason
+ surname: Fox
+ mail:
+ organization: Fiware 
  project: 
  comments: 
 -
- name: Jason
- surname:  Fox
- mail: None
- organization: @Fiware 
+ name: Otto
+ surname: Hylli
+ mail:
+ organization: Tampere University
  project: 
  comments: 
