--- a/ThreePhaseAcMeasurement/fullModel.yaml
+++ b/ThreePhaseAcMeasurement/fullModel.yaml
@@ -2,13 +2,10 @@
 # Copyright (c) 2020 Contributors to Smart-Data-Models
 # see https://github.com/smart-data-models/dataModel.Energy
 ThreePhaseAcMeasurement:
-  description: 'An electrical  measurement from a system that uses three phase alternating
-    current.'
+  description: 'An electrical  measurement from a system that uses three phase alternating current.'
   properties:
     activeEnergyExport:
-      description: 'Active energy exported per phase since the metering start date.
-        The actual values will be conveyed by subproperties which names will be equal
-        to the name of each of the alternating current phases: L1, L2, L3.'
+      description: 'Active energy exported per phase since the metering start date. The actual values will be conveyed by subproperties which names will be equal to the name of each of the alternating current phases: L1, L2, L3.'
       properties:
         L1:
           minimum: 0
@@ -24,10 +21,7 @@ ThreePhaseAcMeasurement:
         model: http://schema.org/StructuredValue
         units: 'kilowatt hour (kWh)'
     activeEnergyImport:
-      description: 'Active energy imported i.e. consumed per phase since the metering
-        start date. The actual values will be conveyed by subproperties which names
-        will be equal to the name of each of the alternating current phases: L1, L2,
-        L3.'
+      description: 'Active energy imported i.e. consumed per phase since the metering start date. The actual values will be conveyed by subproperties which names will be equal to the name of each of the alternating current phases: L1, L2, L3.'
       properties:
         L1:
           minimum: 0
@@ -43,9 +37,7 @@ ThreePhaseAcMeasurement:
         model: http://schema.org/StructuredValue
         units: 'kilowatt hour (kWh)'
     activePower:
-      description: 'The actual values will beconveyed by subproperties which names
-        will be equal to the name of each of the alternating current phases: L1, L2,
-        L3. '
+      description: 'The actual values will beconveyed by subproperties which names will be equal to the name of each of the alternating current phases: L1, L2, L3. '
       properties:
         L1:
           type: number
@@ -77,9 +69,7 @@ ThreePhaseAcMeasurement:
     alternateName:
       type: string
     apparentEnergyExport:
-      description: 'Apparent energy exported per phase since the metering start date.
-        The actual values will be conveyed by subproperties which names will be equal
-        to the name of each of the alternating current phases: L1, L2, L3.'
+      description: 'Apparent energy exported per phase since the metering start date. The actual values will be conveyed by subproperties which names will be equal to the name of each of the alternating current phases: L1, L2, L3.'
       properties:
         L1:
           minimum: 0
@@ -95,10 +85,7 @@ ThreePhaseAcMeasurement:
         model: http://schema.org/StructuredValue
         units: 'kilovolt-ampere-hour (kVAh)'
     apparentEnergyImport:
-      description: 'Apparent energy imported i.e. consumed per phase since the metering
-        start date. The actual values will be conveyed by subproperties which names
-        will be equal to the name of each of the alternating current phases: L1, L2,
-        L3.'
+      description: 'Apparent energy imported i.e. consumed per phase since the metering start date. The actual values will be conveyed by subproperties which names will be equal to the name of each of the alternating current phases: L1, L2, L3.'
       properties:
         L1:
           minimum: 0
@@ -114,9 +101,7 @@ ThreePhaseAcMeasurement:
         model: http://schema.org/StructuredValue
         units: 'kilovolt-ampere-hour (kVAh)'
     apparentPower:
-      description: 'Apparent power consumed per phase. The actual values will be conveyed
-        by subproperties which names will be equal to the name of each of the alternating
-        current phases: L1, L2, L3'
+      description: 'Apparent power consumed per phase. The actual values will be conveyed by subproperties which names will be equal to the name of each of the alternating current phases: L1, L2, L3'
       properties:
         L1:
           minimum: 0
@@ -134,9 +119,7 @@ ThreePhaseAcMeasurement:
     areaServed:
       type: string
     current:
-      description: 'Electrical current. The actual values will be conveyed by one
-        subproperty per alternating current phase and the neutral wire: L1, L2, L3
-        and N.'
+      description: 'Electrical current. The actual values will be conveyed by one subproperty per alternating current phase and the neutral wire: L1, L2, L3 and N.'
       properties:
         L1:
           type: number
@@ -167,9 +150,7 @@ ThreePhaseAcMeasurement:
     description:
       type: string
     displacementPowerFactor:
-      description: 'Displacement power factor for each phase. The quantity is based
-        on the fundamental frequency of the system. The actual values will be conveyed
-        by one subproperty per alternating current phase: L1, L2 and L3'
+      description: 'Displacement power factor for each phase. The quantity is based on the fundamental frequency of the system. The actual values will be conveyed by one subproperty per alternating current phase: L1, L2 and L3'
       properties:
         L1:
           maximum: 1
@@ -356,8 +337,7 @@ ThreePhaseAcMeasurement:
         anyOf: *threephaseacmeasurement_-_properties_-_owner_-_items_-_anyof
       type: array
     phaseToPhaseVoltage:
-      description: 'Voltage between phases. A value for each phase pair: phases 1
-        and 2 (L12), phases 2 and 3 (L32), phases 3 and 1 (L31).'
+      description: 'Voltage between phases. A value for each phase pair: phases 1 and 2 (L12), phases 2 and 3 (L32), phases 3 and 1 (L31).'
       properties:
         L12:
           minimum: 0
@@ -373,9 +353,7 @@ ThreePhaseAcMeasurement:
         model: (http://schema.org/StructuredValue
         units: 'Volts (V)'
     phaseVoltage:
-      description: 'The voltage between each phase and neutral conductor. The actual
-        values will be conveyed by one subproperty per alternating current phase:
-        L1, L2 and L3'
+      description: 'The voltage between each phase and neutral conductor. The actual values will be conveyed by one subproperty per alternating current phase: L1, L2 and L3'
       properties:
         L1:
           minimum: 0
@@ -391,8 +369,7 @@ ThreePhaseAcMeasurement:
         model: http://schema.org/StructuredValue
         units: 'Volts (V)'
     powerFactor:
-      description: 'Power factor for each phase. The actual values will be conveyed
-        by one subproperty per alternating current phase: L1, L2 and L3'
+      description: 'Power factor for each phase. The actual values will be conveyed by one subproperty per alternating current phase: L1, L2 and L3'
       properties:
         L1:
           maximum: 1
@@ -411,10 +388,7 @@ ThreePhaseAcMeasurement:
         model: http://schema.org/StructuredValue
         units: '-1 to +1'
     reactiveEnergyExport:
-      description: 'Fundamental frequency reactive energy exported per phase since
-        the metering start date. The actual values will be conveyed by subproperties
-        which names will be equal to the name of each of the alternating current phases:
-        L1, L2, L3.'
+      description: 'Fundamental frequency reactive energy exported per phase since the metering start date. The actual values will be conveyed by subproperties which names will be equal to the name of each of the alternating current phases: L1, L2, L3.'
       properties:
         L1:
           minimum: 0
@@ -430,10 +404,7 @@ ThreePhaseAcMeasurement:
         model: http://schema.org/StructuredValue
         units: 'kilovolt-ampere-reactive-hour (kVArh)'
     reactiveEnergyImport:
-      description: 'Fundamental frequency reactive energy imported i.e. consumed per
-        phase since the metering start date. The actual values will be conveyed by
-        subproperties which names will be equal to the name of each of the alternating
-        current phases: L1, L2, L3.'
+      description: 'Fundamental frequency reactive energy imported i.e. consumed per phase since the metering start date. The actual values will be conveyed by subproperties which names will be equal to the name of each of the alternating current phases: L1, L2, L3.'
       properties:
         L1:
           minimum: 0
@@ -449,9 +420,7 @@ ThreePhaseAcMeasurement:
         model: 'kilovolt-ampere-reactive-hour (kVArh)'
         units: http://schema.org/StructuredValue
     reactivePower:
-      description: 'Fundamental frequency reactive power. The actual values will be
-        conveyed by subproperties whose names will be equal to the name of each of
-        the alternating current phases: L1, L2, L3.'
+      description: 'Fundamental frequency reactive power. The actual values will be conveyed by subproperties whose names will be equal to the name of each of the alternating current phases: L1, L2, L3.'
       properties:
         L1:
           type: number
@@ -489,9 +458,7 @@ ThreePhaseAcMeasurement:
     source:
       type: string
     thdCurrent:
-      description: 'Total harmonic distortion of electrical current. The actual values
-        will be conveyed by one subproperty per alternating current phase: L1, L2
-        and L3'
+      description: 'Total harmonic distortion of electrical current. The actual values will be conveyed by one subproperty per alternating current phase: L1, L2 and L3'
       properties:
         L1:
           maximum: 1
@@ -510,9 +477,7 @@ ThreePhaseAcMeasurement:
         model: http://schema.org/StructuredValue
         units: '0 to 1'
     thdVoltage:
-      description: 'Total harmonic distortion of voltage for each phase. The actual
-        values will be conveyed by one subproperty per alternating current phase:
-        L1, L2 and L3'
+      description: 'Total harmonic distortion of voltage for each phase. The actual values will be conveyed by one subproperty per alternating current phase: L1, L2 and L3'
       properties:
         L1:
           maximum: 1
@@ -538,8 +503,7 @@ ThreePhaseAcMeasurement:
         model: https://schema.org/Number
         units: 'kilowatt hour (kWh)'
     totalActiveEnergyImport:
-      description: 'Total energy imported i.e. consumed since metering started (since
-        `dateEnergyMeteringStarted`).'
+      description: 'Total energy imported i.e. consumed since metering started (since `dateEnergyMeteringStarted`).'
       minimum: 0
       type: Property
       x-ngsi:
@@ -552,16 +516,14 @@ ThreePhaseAcMeasurement:
         model: http://schema.org/Number
         units: 'watt (W)'
     totalApparentEnergyExport:
-      description: 'Total energy exported (with regards to apparent power) since the
-        metering start date (`dateEnergyMeteringStarted`)'
+      description: 'Total energy exported (with regards to apparent power) since the metering start date (`dateEnergyMeteringStarted`)'
       minimum: 0
       type: Property
       x-ngsi:
         model: https://schema.org/Number
         units: 'kilovolt-ampere-reactive-hour (kVArh)'
     totalApparentEnergyImport:
-      description: 'Total energy imported i.e. consumed (with regards to apparent
-        power) since the metering start date (`dateEnergyMeteringStarted`)'
+      description: 'Total energy imported i.e. consumed (with regards to apparent power) since the metering start date (`dateEnergyMeteringStarted`)'
       minimum: 0
       type: Property
       x-ngsi:
@@ -575,8 +537,7 @@ ThreePhaseAcMeasurement:
         model: http://schema.org/Number
         units: 'volt-ampere (VA)'
     totalDisplacementPowerFactor:
-      description: 'Displacement power factor including all phases. The quantity is
-        based on the fundamental frequency of the system'
+      description: 'Displacement power factor including all phases. The quantity is based on the fundamental frequency of the system'
       maximum: 1
       minimum: -1
       type: Property
@@ -592,16 +553,14 @@ ThreePhaseAcMeasurement:
         model: http://schema.org/Number
         units: '-1 to +1'
     totalReactiveEnergyExport:
-      description: 'Total fundamental frequency reactive energy exported since metering
-        started (since `dateEnergyMeteringStarted`).'
+      description: 'Total fundamental frequency reactive energy exported since metering started (since `dateEnergyMeteringStarted`).'
       minimum: 0
       type: Property
       x-ngsi:
         model: https://schema.org/Number
         units: 'kilovolt-ampere-reactive-hour (kVArh)'
     totalReactiveEnergyImport:
-      description: 'Total energy imported i.e. consumed (with regards to fundamental
-        frequency reactive power) since the metering start date (`dateEnergyMeteringStarted`)'
+      description: 'Total energy imported i.e. consumed (with regards to fundamental frequency reactive power) since the metering start date (`dateEnergyMeteringStarted`)'
       minimum: 0
       type: Property
       x-ngsi:
