--- a/CONTRIBUTORS.yaml
+++ b/CONTRIBUTORS.yaml
@@ -18,7 +18,7 @@ contributors:
  name: Jason
  surname: Fox
  mail:
- organization: Fiware 
+ organization: FIWARE Foundation 
  project: 
  comments: 
 -
