--- a/CONTRIBUTORS.yaml
+++ b/CONTRIBUTORS.yaml
@@ -22,6 +22,13 @@ contributors:
  project: 
  comments: 
 -
+ name: Stephane
+ surname: Roux
+ mail: stephane.roux@nicecotedazur.org
+ organization: Métropole Nice Côte d'Azur
+ project:
+ comments:
+-
  name: Otto
  surname: Hylli
  mail:
