--- a/ACMeasurement/model.yaml
+++ b/ACMeasurement/model.yaml
@@ -13,9 +13,10 @@ ACMeasurement:
         L3:
           minimum: 0
           type: number
-      type: Property
+      type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
+        type: Property
         units: 'kilowatt hour'
     activeEnergyImport:
       description: 'Active energy imported i.e. consumed per phase. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
@@ -29,9 +30,10 @@ ACMeasurement:
         L3:
           minimum: 0
           type: number
-      type: Property
+      type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
+        type: Property
         units: 'kilowatt hour'
     activePower:
       description: 'Active power consumed per phase. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
@@ -45,9 +47,10 @@ ACMeasurement:
         L3:
           minimum: 0
           type: number
-      type: Property
+      type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
+        type: Property
         units: Watt
     address:
       description: 'The mailing address'
@@ -70,12 +73,15 @@ ACMeasurement:
         streetAddress:
           description: 'Property. The street address. Model:''https://schema.org/streetAddress'''
           type: string
-      type: Property
+      type: object
       x-ngsi:
         model: https://schema.org/address
+        type: Property
     alternateName:
       description: 'An alternative name for this item'
-      type: Property
+      type: string
+      x-ngsi:
+        type: Property
     apparentEnergyExport:
       description: 'Apparent energy exported per phase. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       properties:
@@ -88,9 +94,10 @@ ACMeasurement:
         L3:
           minimum: 0
           type: number
-      type: Property
+      type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
+        type: Property
         units: kilovolt-ampere-hour
     apparentEnergyImport:
       description: 'Apparent energy imported i.e. consumed per phase. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
@@ -104,9 +111,10 @@ ACMeasurement:
         L3:
           minimum: 0
           type: number
-      type: Property
+      type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
+        type: Property
         units: kilovolt-ampere-hour
     apparentPower:
       description: 'Apparent power consumed per phase. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
@@ -120,15 +128,17 @@ ACMeasurement:
         L3:
           minimum: 0
           type: number
-      type: Property
+      type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
+        type: Property
         units: Watt
     areaServed:
       description: 'The geographic area where a service or offered item is provided'
-      type: Property
+      type: string
       x-ngsi:
         model: https://schema.org/Text
+        type: Property
     current:
       description: 'Electrical current. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       properties:
@@ -140,42 +150,54 @@ ACMeasurement:
           type: number
         N:
           type: number
-      type: Property
+      type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
+        type: Property
         units: Ampere
     dataProvider:
       description: 'A sequence of characters identifying the provider of the harmonised data entity.'
-      type: Property
+      type: string
+      x-ngsi:
+        type: Property
     dateCreated:
       description: 'Entity creation timestamp. This will usually be allocated by the storage platform.'
       format: date-time
-      type: Property
+      type: string
+      x-ngsi:
+        type: Property
     dateEnergyMeteringStarted:
       description: 'The starting date for metering energy in an ISO8601 UTC format.'
       format: date-time
-      type: Property
+      type: string
       x-ngsi:
         model: https://schema.org/DateTime
+        type: Property
     dateModified:
       description: 'Timestamp of the last modification of the entity. This will usually be allocated by the storage platform.'
       format: date-time
-      type: Property
+      type: string
+      x-ngsi:
+        type: Property
     dateObservedFrom:
       description: 'Observation period: Start date and time in an ISO8601 UTC format. The attribute can be used in addition to the `dateObserved` attribute when it corresponds to a time interval to be highlighted.'
       format: date-time
-      type: Property
+      type: string
       x-ngsi:
         model: https://schema.org/DateTime
+        type: Property
     dateObservedTo:
       description: 'Observation period: End date and time in an ISO8601 UTC format. The attribute can be used in addition to the `dateObserved` attribute when it corresponds to a time interval to be highlighted.'
       format: date-time
-      type: Property
+      type: string
       x-ngsi:
         model: https://schema.org/DateTime
+        type: Property
     description:
       description: 'A description of this item'
-      type: Property
+      type: string
+      x-ngsi:
+        type: Property
     displacementPowerFactor:
       description: 'Displacement power factor for each phase. The quantity is based on the fundamental frequency of the system.'
       properties:
@@ -191,15 +213,17 @@ ACMeasurement:
           maximum: 1
           minimum: -1
           type: number
-      type: Property
+      type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
+        type: Property
     frequency:
       description: 'The frequency of the circuit. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       minimum: 0
-      type: Property
+      type: number
       x-ngsi:
         model: https://schema.org/Number
+        type: Property
         units: Hertz
     id:
       anyOf: &acmeasurement_-_properties_-_owner_-_items_-_anyof
@@ -212,7 +236,8 @@ ACMeasurement:
           format: uri
           type: string
       description: 'Unique identifier of the entity'
-      type: Property
+      x-ngsi:
+        type: Property
     location:
       description: 'Geojson reference to the item. It can be Point, LineString, Polygon, MultiPoint, MultiLineString or MultiPolygon'
       oneOf:
@@ -364,16 +389,21 @@ ACMeasurement:
             - coordinates
           title: 'GeoJSON MultiPolygon'
           type: object
-      type: Geoproperty
+      x-ngsi:
+        type: Geoproperty
     name:
       description: 'The name of this item.'
-      type: Property
+      type: string
+      x-ngsi:
+        type: Property
     owner:
       description: 'A List containing a JSON encoded sequence of characters referencing the unique Ids of the owner(s)'
       items:
         anyOf: *acmeasurement_-_properties_-_owner_-_items_-_anyof
         description: 'Property. Unique identifier of the entity'
-      type: Property
+      type: array
+      x-ngsi:
+        type: Property
     phaseToPhaseVoltage:
       description: 'Voltage between phases. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       properties:
@@ -386,18 +416,20 @@ ACMeasurement:
         L31:
           minimum: 0
           type: number
-      type: Property
+      type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
+        type: Property
         units: Volts
     phaseType:
       description: 'Type of Phase. A unique value. Enum:''singlePhase, threePhase'''
       enum:
         - singlePhase
         - treePhase
-      type: Property
+      type: string
       x-ngsi:
         model: https://schema.org/Text
+        type: Property
     phaseVoltage:
       description: 'The voltage between each phase and neutral conductor. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       properties:
@@ -410,9 +442,10 @@ ACMeasurement:
         L3:
           minimum: 0
           type: number
-      type: Property
+      type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
+        type: Property
         units: Volts
     powerFactor:
       description: 'Power factor for each phase.'
@@ -429,9 +462,10 @@ ACMeasurement:
           maximum: 1
           minimum: -1
           type: number
-      type: Property
+      type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
+        type: Property
     reactiveEnergyExport:
       description: 'Fundamental frequency reactive energy exported per phase. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       properties:
@@ -444,9 +478,10 @@ ACMeasurement:
         L3:
           minimum: 0
           type: number
-      type: Property
+      type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
+        type: Property
         units: kilovolt-ampere-reactive-hour
     reactiveEnergyImport:
       description: 'Fundamental frequency reactive energy imported i.e. consumed per phase. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
@@ -460,9 +495,10 @@ ACMeasurement:
         L3:
           minimum: 0
           type: number
-      type: Property
+      type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
+        type: Property
         units: kilovolt-ampere-reactive-hour
     reactivePower:
       description: 'Fundamental frequency reactive power. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
@@ -476,9 +512,10 @@ ACMeasurement:
         L3:
           minimum: 0
           type: number
-      type: Property
+      type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
+        type: Property
         units: volts-ampere-reactive
     refDevice:
       description: 'Reference to the devices which captured this observation'
@@ -486,18 +523,21 @@ ACMeasurement:
         anyOf: *acmeasurement_-_properties_-_owner_-_items_-_anyof
         description: 'Property. Unique identifier of the entity'
       minItems: 1
-      type: Property
+      type: array
       uniqueItems: true
       x-ngsi:
         model: https://schema.org/URL
+        type: Property
     refTargetDevice:
       description: 'Reference to a list of the devices for which the measurement was taken'
       items:
         anyOf: *acmeasurement_-_properties_-_owner_-_items_-_anyof
         description: 'Property. Unique identifier of the entity'
       minItems: 1
-      type: Relationship
+      type: array
       uniqueItems: true
+      x-ngsi:
+        type: Relationship
     seeAlso:
       description: 'list of uri pointing to additional resources about the item'
       oneOf:
@@ -508,10 +548,13 @@ ACMeasurement:
           type: array
         - format: uri
           type: string
-      type: Property
+      x-ngsi:
+        type: Property
     source:
       description: 'A sequence of characters giving the original source of the entity data as a URL. Recommended to be the fully qualified domain name of the source provider, or the URL to the source object.'
-      type: Property
+      type: string
+      x-ngsi:
+        type: Property
     thdCurrent:
       description: 'Total harmonic distortion of current for each phase.'
       properties:
@@ -527,9 +570,10 @@ ACMeasurement:
           maximum: 1
           minimum: 0
           type: number
-      type: Property
+      type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
+        type: Property
     thdVoltage:
       description: 'Total harmonic distortion of voltage for each phase.'
       properties:
@@ -545,89 +589,103 @@ ACMeasurement:
           maximum: 1
           minimum: 0
           type: number
-      type: Property
+      type: object
       x-ngsi:
         model: https://schema.org/StructuredValue
+        type: Property
     totalActiveEnergyExport:
       description: 'Total energy imported i.e. consumed . The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       minimum: 0
-      type: Property
+      type: number
       x-ngsi:
         model: https://schema.org/Number
+        type: Property
         units: 'kilowatt hour'
     totalActiveEnergyImport:
       description: 'Total energy imported i.e. consumed. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       minimum: 0
-      type: Property
+      type: number
       x-ngsi:
         model: https://schema.org/Number
+        type: Property
         units: 'kilowatt hour'
     totalActivePower:
       description: 'Total Active Power consumed. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
-      type: Property
+      type: number
       x-ngsi:
         model: https://schema.org/Number
+        type: Property
         units: Watt
     totalApparentEnergyExport:
       description: 'Total energy exported (with regards to apparent power). The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       minimum: 0
-      type: Property
+      type: number
       x-ngsi:
         model: https://schema.org/StructuredValue
+        type: Property
         units: kilovolt-ampere-hour
     totalApparentEnergyImport:
       description: 'Total energy imported i.e. consumed (with regards to apparent power). The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       minimum: 0
-      type: Property
+      type: number
       x-ngsi:
         model: https://schema.org/Number
+        type: Property
         units: kilovolt-ampere-hour.
     totalApparentPower:
       description: 'Total Apparent Power consumed. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       minimum: 0
-      type: Property
+      type: number
       x-ngsi:
         model: https://schema.org/Number
+        type: Property
         units: volt-ampere
     totalDisplacementPowerFactor:
       description: 'Sum of Displacement power factor including all phases. The quantity is based on the fundamental frequency of the system.'
       maximum: 1
       minimum: -1
-      type: Property
+      type: number
       x-ngsi:
         model: https://schema.org/StructuredValue
+        type: Property
     totalPowerFactor:
       description: 'Sum of Power factor including all phases.'
       maximum: 1
       minimum: -1
-      type: Property
+      type: number
       x-ngsi:
         model: https://schema.org/StructuredValue
+        type: Property
     totalReactiveEnergyExport:
       description: 'Total fundamental frequency reactive energy exported. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       minimum: 0
-      type: Property
+      type: number
       x-ngsi:
         model: https://schema.org/StructuredValue
+        type: Property
         units: kilovolt-ampere-reactive-hour
     totalReactiveEnergyImport:
       description: 'Total energy imported i.e. consumed (with regards to fundamental frequency reactive power). The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
       minimum: 0
-      type: Property
+      type: number
       x-ngsi:
         model: https://schema.org/Number
+        type: Property
         units: kilovolt-ampere-reactive-hour.
     totalReactivePower:
       description: 'Total Reactive Power consumed. The unit code (text) is given using the [UN/CEFACT Common Codes](http://wiki.goodrelations-vocabulary.org/Documentation/UN/CEFACT_Common_Codes)'
-      type: Property
+      type: number
       x-ngsi:
         model: https://schema.org/Number
+        type: Property
         units: volt-ampere-reactive
     type:
       description: 'NGSI property type. It has to be ACMeasurement'
       enum:
         - ACMeasurement
-      type: Property
+      type: string
+      x-ngsi:
+        type: Property
   required:
     - id
     - type
