--- a/CONTRIBUTORS.yaml
+++ b/CONTRIBUTORS.yaml
@@ -22,6 +22,13 @@ contributors:
  project: 
  comments: 
 -
+ name: Bertrand
+ surname: Le Droumaguet
+ mail: bertrand.le-droumaguet@atos.net
+ organization: Atos - Sophia Antipolis
+ project: Data Lake
+ comments: SmartCity Project
+-
  name: Stephane
  surname: Roux
  mail: stephane.roux@nicecotedazur.org
